/*
 * $Id: ChangeLog,v 1.3002 2004/05/28 19:13:51 kaddath Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-28 15:19 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.sly
    ! Fixed GPF trap related to duplicate usage of pGetVar without cloning.

  * source/vm/classes.c
    ! Fixed GPF trap related to releasing class methods before release of datas inlines
      (which might refer back to a method)

2004-05-28 12:10 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * contrib/rdd_ads/adsfunc.c
    ! fixed gpf in adsKeyCount() when no params provided

2004-05-28 22:50 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  + make_bsd.sh
  * bin/hb-func.sh
  * bin/postinst.sh
  * config/bsd/gcc.cf
  * config/bsd/global.cf
  * include/thread.h
  * source/rtl/hbserv.c
  * source/vm/thread.c
  * tests/Makefile
    ! Fixed BSD support, including threads and signals.

2004-05-28 12:50 UTC-0800 Brian Hays <bhays@abacuslaw.com>
  * contrib/rdd_ads/adsfunc.c
    * fixed adsKeyCount arg handling bug when called like adsKeyCount()

2004-05-27 22:50 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * source/rtl/tget.prg
    ! minor fix on buildgetcolor function

2004-05-28 01:55 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    ! fixed bug in number of update optimization - thanks to Teo Fonrouge

2004-05-27 19:30 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
  * source/vm/errorapi.c
  * source/vm/estack.c
    - Removed hb_isService() condition from Internal Error report

2004-05-28 08:22 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * hrbdll.bc
    + Altered to use c0d32.obj not c0d32w.obj

2004-05-27 11:10 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * source/rtl/tget.prg