@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3002 2004/05/28 19:13:51 kaddath Exp $
+ * $Id: ChangeLog,v 1.3003 2004/05/28 22:20:15 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-05-28 17:25 UTC-0800 Luis Krause Mantilla
+  * contrib/rdd_ads/adsfunc.c
+    * restored Brian's fix to the gpf issue
 
 2004-05-28 15:19 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/compiler/harbour.sly
